k8s/base/node-app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-app
  labels:
    name: node-app
