k8s/base/node-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-app
  name: node-app
spec:
  ports:
  - name: node
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: node-app
  type: ClusterIP
