k8s/base/node-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress-app
spec:
  ingressClassName: nginx
  rules:
  - host: node.local
    http:
      paths:
      - backend:
          service:
            name: node-app
            port:
              number: 3000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
